# timecli

./: .gitignore  Dockerfile  Taskfile.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
app/: main.py  taskmanager.py  test_main.py
data/: tasks.json
tests/: test_taskmanager.py
workflows/: ci.yml
