[project]
name = "timecli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flake8>=7.2.0",
    "go-task-bin>=3.43.3",
]

[project.scripts]
timecli = "app.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]