[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timecli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Add any actual RUNTIME Python dependencies for your timecli application here.
    # For example, if you were using Typer: "typer>=0.9.0"
    # If your application has no external runtime Python dependencies, leave this list empty.
]

[project.scripts]
timecli = "app.main:cli"

[project.optional-dependencies]
dev = [
    "flake8>=7.0.0",
    "pytest>=7.0.0",
    # "go-task-bin>=3.43.3", # You can keep this if you use it for local Python-based Task execution
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]